<resources>
    <string name="app_name">SensorApp</string>
    <string name="finish_the_work">结束作业</string>
    <string name="start_work">开始工作</string>
    <string name="time">时间</string>
    <string name="battery_level">电池电量</string>
    <string name="gps">GPS</string>
    <string name="heart_rate">心率</string>
    <string name="blood_oxygen">血氧</string>
    <string name="step_count">步数</string>
    <string name="heart_rate_uit">心率(bmp)</string>
    <string name="work_time">工作时间</string>
</resources>